--- a/silent-check-sso.html
+++ b/silent-check-sso.html
@@ -6,7 +6,7 @@
     <title>Silent Check SSO</title>
 </head>
 <body>
-    <script>
+    <script type="module">
         // The purpose of this page is to facilitate silent SSO login via an iframe
         parent.postMessage(location.href, location.origin);
     </script>
