--- a/apps/app2/app.html
+++ b/apps/app2/app.html
@@ -11,11 +11,13 @@
 <body>
     <div class="container">
     </div>
-    <script>
+    <script type="module">
+        import { keycloakConfig } from '../../config.js';
+
         const keycloak = new Keycloak({
-            url: 'https://nforce-haud-vm-ub22-development29.devenv.haud.report', // Keycloak server URL
-            realm: 'sso-poc', // Realm name
-            clientId: 'app2' // Client ID
+            url: keycloakConfig.url, // Keycloak server URL
+            realm: keycloakConfig.realm, // Realm name
+            clientId: keycloakConfig.app2_client_id // Client ID
         });
 
         keycloak.init({
