--- a/apps/app3/app.html
+++ b/apps/app3/app.html
@@ -10,11 +10,13 @@
 </head>
 
 <body>
-    <script>
+    <script type="module">
+        import { keycloakConfig } from '../../config.js';
+
         const keycloak = new Keycloak({
-            url: 'https://nforce-haud-vm-ub22-development29.devenv.haud.report', // Keycloak server URL
-            realm: 'sso-poc', // Realm name
-            clientId: 'app3' // Client ID
+            url: keycloakConfig.url, // Keycloak server URL
+            realm: keycloakConfig.realm, // Realm name
+            clientId: keycloakConfig.app3_client_id // Client ID
         });
 
         keycloak.init({
