--- a/home.html
+++ b/home.html
@@ -141,7 +141,7 @@
         </header>
         <nav>
             <a href="home.html" class="nav-link">Home</a>
-            <a href="user_management.html" class="nav-link">User Management</a>
+            <a href="user-management.html" class="nav-link">User Management</a>
         </nav>
         <main>
             <h2>Select an Application</h2>
